Updated user controller